--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.username=fernando
 spring.datasource.password=127856
 spring.datasource.url=jdbc:mysql://192.168.0.2:3306/photo_app
 spring.jpa.hibernate.ddl-auto=update
+server.error.include-message=always
