--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.password=127856
 spring.datasource.url=jdbc:mysql://192.168.0.2:3306/photo_app
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
+tokenSecret = 34hj3k29skkx
