--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=fernando.beilke@live.com
+spring.mail.password=bdqurklhgvjlafsv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.datasource.username=fernando
 spring.datasource.password=127856
 spring.datasource.url=jdbc:mysql://192.168.0.2:3306/photo_app
