Added initial classes for testing and also refactored the logic for sending email

--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 tokenSecret=34hj3k29skkx
 server.servlet.context-path=/uranus
+server.port=8088
